--- a/interoperability.tex
+++ b/interoperability.tex
@@ -1,15 +1,13 @@
 \graphicspath{ {Figures/interoperability/} }
 \chapter{Διασυνδεσιμότητα}\label{ch:Interoperability}
-\section{Απαιτήσεις}
-
 \section{Πρωτόκολλα επικοινωνίας}
 
 
 	\subsection{Το πρότυπο Health Level Seven (HL7)}
 		\subsubsection{Ο Οργανισμός Health Level Seven (HL7)}
-		Το πρότυπο HL7 έχει δημιουργηθεί από τον ομώνυμο οργανισμό Health Level Seven, ο οποίος αποτελεί μη κερδοσκοπικό οργανισμό με έτος ίδρυσης 1987 στις Ηνωμένες Πολιτείες της Αμερικής\cite{HL7Organization}\cite{blobel2003hl7}. Ο οργανισμός HL7 συστάθηκε με στόχο τη δημιουργία παγκοσμίως αναγνωρισμένων και αξιόπιστων προτύπων για την ανταλλαγή ιατρικών δεδομένων μεταξύ ενδιαφερομένων φορέων στον τομέα της ιατρικής περίθαλψης. Τα δεδομένα αυτά αφορούν τόσο στην κλινική φροντίδα των ασθενών όσο και στο κομμάτι της διαχείρισης, οργάνωσης, αξιολόγησης και επέκτασης των υπηρεσιών Ιατρικής φροντίδας.
+		Το πρότυπο HL7 έχει δημιουργηθεί από τον ομώνυμο οργανισμό Health Level Seven, ο οποίος αποτελεί μη κερδοσκοπικό οργανισμό με έτος ίδρυσης 1987 στις Ηνωμένες Πολιτείες της Αμερικής \cite{HL7Organization}\cite{blobel2003hl7}. Ο οργανισμός HL7 συστάθηκε με στόχο τη δημιουργία παγκοσμίως αναγνωρισμένων και αξιόπιστων προτύπων για την ανταλλαγή ιατρικών δεδομένων μεταξύ ενδιαφερομένων φορέων στον τομέα της ιατρικής περίθαλψης. Τα δεδομένα αυτά αφορούν τόσο στην κλινική φροντίδα των ασθενών όσο και στο κομμάτι της διαχείρισης, οργάνωσης, αξιολόγησης και επέκτασης των υπηρεσιών Ιατρικής φροντίδας.
 
-Ο μη κερδοσκοπικός οργανισμός Health Level Seven αποτελεί έναν από τους βασικότερους φορείς για τη διασφάλιση και διαλειτουργικότητα μεταξύ των συστημάτων παροχής υπηρεσιών Ηλεκτρονικής Ιατρικής Φροντίδας (e-Health). Αριθμεί πολυποίκιλα μέλη σε περισσότερες από 55 χώρες μεταξύ των οποίων δημόσιους και ιδιωτικούς φορείς Υγείας, εταιρείες παροχής Ιατρικού λογισμικού, εταιρείες παροχής Ιατρικού εξοπλισμού, ειδικούς συμβούλους, εμπειρογνώμονες, ασφαλιστικούς φορείς κτλ\cite{HL7Organization}. Είναι δεδομένο άλλωστε ότι ο χώρος της Υγείας περιλαμβάνει αρκετούς ενδιαφερόμενους φορείς, καθιστώντας απαραίτητη τη χρήση προτύπων και αντίστοιχων αρχιτεκτονικών κατευθύνσεων ώστε να επιτευχθεί η διαλειτουργικότητα σε ένα ενοποιημένο σύστημα Ηλεκτρονικής Υγείας στο οποίο θα συμμετέχουν οι φορείς αυτοί, ο καθένας με το δικό του ρόλο. Επίσης αξίζει να σημειωθεί ότι έχει ο οργανισμός HL7 έχει τοπικά υποκαταστήματα σε όλες σχεδόν τις χώρες της Ευρώπης, στην Αυστραλία - Νέα Ζηλανδία, στην Ασία, στις Ηνωμένες Πολιτείες της Αμερικής και στη ζώνη του Ειρηνικού. Στην Ελλάδα ιδρύθηκε και λειτουργεί από το 2003 το παράρτημα (μη κερδοσκοπικού χαρακτήρα) του διεθνούς οργανισμού Health Level Seven (HL7) με την επωνυμία "HL7 Hellas". Ο ιδρυτικός πυρήνας περιλαμβάνει δεκαπέντε (15) διακεκριμένα ονόματα φορέων τόσο από τον Πανεπιστημιακό όσο και από τον χώρο των εταιριών Ιατρικής Πληροφορικής και Τεχνολογίας\cite{HL7Hellas}.
+Ο μη κερδοσκοπικός οργανισμός Health Level Seven αποτελεί έναν από τους βασικότερους φορείς για τη διασφάλιση και διαλειτουργικότητα μεταξύ των συστημάτων παροχής υπηρεσιών Ηλεκτρονικής Ιατρικής Φροντίδας (e-Health). Αριθμεί πολυποίκιλα μέλη σε περισσότερες από 55 χώρες μεταξύ των οποίων δημόσιους και ιδιωτικούς φορείς Υγείας, εταιρείες παροχής Ιατρικού λογισμικού, εταιρείες παροχής Ιατρικού εξοπλισμού, ειδικούς συμβούλους, εμπειρογνώμονες, ασφαλιστικούς φορείς κ.τ.λ.\cite{HL7Organization}. Είναι δεδομένο άλλωστε ότι ο χώρος της Υγείας περιλαμβάνει αρκετούς ενδιαφερόμενους φορείς, καθιστώντας απαραίτητη τη χρήση προτύπων και αντίστοιχων αρχιτεκτονικών κατευθύνσεων ώστε να επιτευχθεί η διαλειτουργικότητα σε ένα ενοποιημένο σύστημα Ηλεκτρονικής Υγείας στο οποίο θα συμμετέχουν οι φορείς αυτοί, ο καθένας με το δικό του ρόλο. Επίσης αξίζει να σημειωθεί ότι έχει ο οργανισμός HL7 έχει τοπικά υποκαταστήματα σε όλες σχεδόν τις χώρες της Ευρώπης, στην Αυστραλία - Νέα Ζηλανδία, στην Ασία, στις Ηνωμένες Πολιτείες της Αμερικής και στη ζώνη του Ειρηνικού. Στην Ελλάδα ιδρύθηκε και λειτουργεί από το 2003 το παράρτημα (μη κερδοσκοπικού χαρακτήρα) του διεθνούς οργανισμού Health Level Seven (HL7) με την επωνυμία "HL7 Hellas". Ο ιδρυτικός πυρήνας περιλαμβάνει δεκαπέντε (15) διακεκριμένα ονόματα φορέων τόσο από τον Πανεπιστημιακό όσο και από τον χώρο των εταιριών Ιατρικής Πληροφορικής και Τεχνολογίας\cite{HL7Hellas}.
 
 		\subsubsection{Το πρότυπο HL7, έκδοση 2}
 	
@@ -131,7 +129,7 @@
 			\item Γεγονότα π.χ. ραντεβού ασθενούς, εισαγωγή ασθενούς 
 		\end{itemize}
 		\item \textbf{ActRelationship: } Τα Acts συνδέονται μέσω της κλάσης ActRelationship.
-		\item \textbf{Participation: } Ορίζει το περιβάλλον κάποιου Act (συγγραφέας, θέμα, τοποθεσία κτλπ.)
+		\item \textbf{Participation: } Ορίζει το περιβάλλον κάποιου Act (συγγραφέας, θέμα, τοποθεσία κ.τ.λ.)
 		\item \textbf{Entity: } Αποτελεί αναπαράσταση των φυσικών και μη οντοτήτων. Παραδείγματα οντοτήτων αποτελεί έναν ασθενής, ένας οργανισμός ή ακόμα και κάποιο νοσοκομείο.
 		\item \textbf{Role: } Χρησιμοποιείται για να περιγράψει τους ρόλους που έχουν οι οντότητες σε κάποιο Act.
 		\item \textbf{RoleLink: } Δείχνει τη σχέση που έχουν οι διάφοροι ρόλοι (Roles) μεταξύ τους.
@@ -175,7 +173,7 @@
 	Ένα CDA έγγραφο είναι ένα καθορισμένο και πλήρες αντικείμενο πληροφοριών που μπορεί να περιέχει κείμενο, εικόνες, ήχους και άλλο περιεχόμενο πολυμέσων. Ένα έγγραφο CDA αποτελείται από δυο μέρη:
 	\begin{itemize}
 		\item \textbf{Επικεφαλίδα (header): } η οποία περιέχει ουσιαστικά το πλαίσιο (context) όπως περιγράφηκε παραπάνω.
-		\item \textbf{Κυρίως σώμα (body): } περιέχει στοιχεία σχετικά με την εισαγωγή του ασθενή, τη διάγνωση, τα στοιχεία του ασθενή, τα φάρμακα κτλπ.
+		\item \textbf{Κυρίως σώμα (body): } περιέχει στοιχεία σχετικά με την εισαγωγή του ασθενή, τη διάγνωση, τα στοιχεία του ασθενή, τα φάρμακα κ.τ.λ. .
 	\end{itemize}
 	
 	Παρακάτω βλέπουμε ένα παράδειγμα για το πεδίο author μιας επικεφαλίδας:
