--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -308,7 +308,7 @@
 	    \label{fig:NoSQL_vs_rdbms_google}
 	\end{figure}
 	
-	Η χρήση των βάσεων δεδομένων τύπου NoSQL έχει γνωρίσει ραγδαία αύξηση τα τελευταία χρόνια σε εφαρμογές big data καθώς και σε εφαρμογές πραγματικού χρόνου. Αποκαλούνται με τον όρο Not Only SQL για να δοθεί έμφαση στο γεγονός ότι οι δύο τεχνολογίες δεν είναι αμοιβαία αποκλειόμενες. Έχουν την δυνατότητα να συνυπάρχουν, κρατώντας τα δυνατά σημεία της κάθε μιας, προσφέροντας σε διαφορετικές καταστάσεις διαφορετικές υπηρεσίες. Οι βάσεις δεδομένων τύπου NoSQL χρησιμοποιούνται από τις εταιρείες κολοσσούς του τεχνολογικού τομέα όπως το Facebook, Amazon, Google, LinkedIn\cite{5993686}. Ο όγκος των δεδομένων που διαχειρίζονται τέτοιες εταιρείες είναι της τάξης πολλών petabyte και επομένως θα ήταν αδύνατη η κλιμάκωσή τους με κάποιο σχεσιακό σύστημα ΒΔ. Κι αυτό γιατί οι σχεσιακές ΒΔ συναντούν περιορισμούς όσον αφορά την αντιμετώπιση προβλημάτων όπως είναι η εξόρυξη δεδομένων, το Web 2.0, το cloud computing, τα μη γραμμικά σε εκτέλεση ερωτήματα κτλπ.
+	Η χρήση των βάσεων δεδομένων τύπου NoSQL έχει γνωρίσει ραγδαία αύξηση τα τελευταία χρόνια σε εφαρμογές big data καθώς και σε εφαρμογές πραγματικού χρόνου. Αποκαλούνται με τον όρο Not Only SQL για να δοθεί έμφαση στο γεγονός ότι οι δύο τεχνολογίες δεν είναι αμοιβαία αποκλειόμενες. Έχουν την δυνατότητα να συνυπάρχουν, κρατώντας τα δυνατά σημεία της κάθε μιας, προσφέροντας σε διαφορετικές καταστάσεις διαφορετικές υπηρεσίες. Οι βάσεις δεδομένων τύπου NoSQL χρησιμοποιούνται από τις εταιρείες κολοσσούς του τεχνολογικού τομέα όπως το Facebook, Amazon, Google, LinkedIn\cite{5993686}. Ο όγκος των δεδομένων που διαχειρίζονται τέτοιες εταιρείες είναι της τάξης πολλών petabyte και επομένως θα ήταν αδύνατη η κλιμάκωσή τους με κάποιο σχεσιακό σύστημα ΒΔ. Κι αυτό γιατί οι σχεσιακές ΒΔ συναντούν περιορισμούς όσον αφορά την αντιμετώπιση προβλημάτων όπως είναι η εξόρυξη δεδομένων, το Web 2.0, το cloud computing, τα μη γραμμικά σε εκτέλεση ερωτήματα κ.τ.λ. .
 	
 	\begin{figure}[h]
 	    \centering
@@ -641,7 +641,7 @@
 		
 		 Ξεκινώντας από το χαμηλότερο επίπεδο έχουμε \cite{collinsAndroid}\cite{annuzziAndroid}\cite{androidArchAnalysis}:
 		 \begin{itemize}
-		 	\item \textbf{Linux Kernel}: ο οποίος είναι ειδικά σχεδιασμένος για το λειτουργικό σύστημα Android και περιέχει τους οδηγούς για το υλικό (κάμερα, πληκτρολόγιο κτλπ). Επίσης ο πυρήνας είναι υπεύθυνος για τη διαχείριση της μνήμης και των διεργασιών, τις συνδέσεις δικτύου και κατ'επέκταση την διαχείριση των διεπαφών δικτύου που διαθέτει κάθε συσκευή. Επιπρόσθετα χειρίζεται τους πόρους και την ενεργεία κάτι το οποίο είναι πολύ σημαντικό δεδομένου της περιορισμένης παροχής ενέργειας των κινητών συσκευών. 
+		 	\item \textbf{Linux Kernel}: ο οποίος είναι ειδικά σχεδιασμένος για το λειτουργικό σύστημα Android και περιέχει τους οδηγούς για το υλικό (κάμερα, πληκτρολόγιο κ.τ.λ.). Επίσης ο πυρήνας είναι υπεύθυνος για τη διαχείριση της μνήμης και των διεργασιών, τις συνδέσεις δικτύου και κατ'επέκταση την διαχείριση των διεπαφών δικτύου που διαθέτει κάθε συσκευή. Επιπρόσθετα χειρίζεται τους πόρους και την ενεργεία κάτι το οποίο είναι πολύ σημαντικό δεδομένου της περιορισμένης παροχής ενέργειας των κινητών συσκευών. 
 		 	\item \textbf{Libraries} Στο αμέσως επόμενο επίπεδο έχουμε τις βιβλιοθηκές του συστήματος, οι οποίες πολλές φορές αποκαλούνται και εγγενείς βιβλιοθήκες (Native Libraries). Οι εν λόγω βιβλιοθήκες έχουν αναπτυχθεί με χρήση των γλωσσών προγραμματισμού C και C++. Μερικές από τις πιο σημαντικές βιβλιοθήκες αυτού του επίπεδου είναι:
 		 	\begin{itemize}
 		 		\item WebKit, για την υποστήριξη των φυλλομετρητών
@@ -661,7 +661,7 @@
 		 		\item Package Manager: Ο διαχειριστής πακέτων είναι το σύστημα μέσω του οποίου οι εφαρμογές μπορούν να βρουν πληροφορίες για τις υπόλοιπες εφαρμογές που είναι εγκατεστημένες στη συσκευή. Αποτελεί ουσιαστικά μια βάση δεδομένων όλων των εφαρμογών που είναι εγκατεστημένες στην συσκευή και επιτρέπει σε μια μια εφαρμογή να χρησιμοποιήσει μια άλλη και να μοιραστεί δεδομένα με αυτήν.
 		 		\item Activity Manager: Ο διαχειριστής δραστηριοτήτων, διαχειρίζεται τον κύκλο ζωής των εφαρμογών και τη στοίβα δραστηριοτήτων (activity stack).
 		 		\item Content Providers: Οι πάροχοι περιεχομένου επιτρέπουν στις εφαρμογές να δημοσιεύουν και να μοιράζονται δεδομένα με άλλες εφαρμογές. Αποτελούν ουσιαστικά βάσεις δεδομένων οι οποίες δίνουν την δυνατότητα στις εφαρμογές να αποθηκεύσουν και να μοιραστούν δομημένες πληροφορίες. Παράδειγμα τέτοιων πληροφοριών αποτελούν οι επαφές της συσκευής.
-		 		\item View System: Περιλαμβάνει γραφικά στοιχεία τα οποία χρησιμοποιούνται για την δημιουργία της διεπαφής χρήστη. Παράδειγμα γραφικών στοιχείων που περιλαμβάνει είναι κουμπιά, κουτιά κειμένων, πλαίσια κτλπ.
+		 		\item View System: Περιλαμβάνει γραφικά στοιχεία τα οποία χρησιμοποιούνται για την δημιουργία της διεπαφής χρήστη. Παράδειγμα γραφικών στοιχείων που περιλαμβάνει είναι κουμπιά, κουτιά κειμένων, πλαίσια κ.τ.λ.
 		 		\item Resource Manager: Ο διαχειριστής πόρων είναι υπεύθυνος για την διαχείριση των πόρων που δεν αποτελούν κώδικα και κατ'επέκταση δεν μπορούν να μεταγλωττιστούν. Παράδειγμα τέτοιων στοιχείων αποτελούν τα γραφικά στοιχεία και οι συμβολοσειρές.
 		 		\item Notification Manager: Ο διαχειριστής ειδοποιήσεων επιτρέπει στις εφαρμογές να εμφανίζουν ειδοποιήσεις προς το χρήστη. Οι ειδοποιήσεις αυτές εμφανίζονται στην μπάρα κατάστασης της συσκευής η οποία βρίσκεται στο πάνω μέρος της οθόνης και είναι σχεδόν πάντα ορατή στον χρήστη.
 		 		\item Telephony Manager: Ο διαχειριστής τηλεφωνίας παρέχει πληροφορίες στην εφαρμογή σχετικά με τις υπηρεσίες τηλεφώνου που είναι διαθέσιμες στην συσκευή.
@@ -716,7 +716,7 @@
 		\subsubsection{Content Providers}
 		Οι πάροχοι περιεχομένου διαχειρίζονται την πρόσβαση στους αποθηκευτικούς χώρους των δεδομένων. Ουσιαστικά δίνει την δυνατότητα αποθήκευσης και διαμοιρασμού δεδομένων στις εφαρμογές. Ένας πάροχος δεδομένων παρουσιάζει τα δεδομένα στις εφαρμογές σε μορφή πινάκων σαν τους πίνακες σε μια σχεσιακή βάση δεδομένων. Παράδειγμα ενός ενσωματωμένου παροχέα δεδομένων είναι το λεξικό χρήστη στο οποίο αποθηκεύονται οι λέξεις του χρήστη. Για αυτή τη χρήση υπάρχει και η ενσωματωμένη βάση δεδομένων SQLite, η οποία δίνει την δυνατότητα αποθηκεύσης και ανάγνωσης δεδομένων στους παρόχους περιεχομένου.\cite{androidContentProviders}
 		\subsubsection{Broadcast Receivers}
-		Οι δέκτες εκπεμπόμενων προθέσεων είναι υπεύθυνοι για την λήψη και διαχείριση γεγονότων πραγματοποιούνται στην συσκευή. Συγκεκριμένα ενημερώνονται από το λειτουργικό σύστημα όταν πραγματοποιείται κάποιο γεγονός και τότε ενεργοποιούνται. Χαρακτηριστικά παραδείγματα τέτοιων γεγονότων είναι ότι το κινητό μπήκε σε κατάσταση αναμονής, ότι η στάθμη της μπαταρίας είναι χαμηλή κτλπ. Οι δέκτες εκπεμπόμενων προθέσεων δεν παρέχουν κάποια διεπαφή προς τον χρήστη όπως και οι υπηρεσίες και μπορούν να επικοινωνήσουν με τον χρήστη μέσω ειδοποιήσεων στο status bar.\cite{broadcastReceiver}
+		Οι δέκτες εκπεμπόμενων προθέσεων είναι υπεύθυνοι για την λήψη και διαχείριση γεγονότων πραγματοποιούνται στην συσκευή. Συγκεκριμένα ενημερώνονται από το λειτουργικό σύστημα όταν πραγματοποιείται κάποιο γεγονός και τότε ενεργοποιούνται. Χαρακτηριστικά παραδείγματα τέτοιων γεγονότων είναι ότι το κινητό μπήκε σε κατάσταση αναμονής, ότι η στάθμη της μπαταρίας είναι χαμηλή κ.τ.λ. . Οι δέκτες εκπεμπόμενων προθέσεων δεν παρέχουν κάποια διεπαφή προς τον χρήστη όπως και οι υπηρεσίες και μπορούν να επικοινωνήσουν με τον χρήστη μέσω ειδοποιήσεων στο status bar.\cite{broadcastReceiver}
 
 %		\textbf{Material design ? Αν δεν είναι API Level 21?}
 %	\subsection{Mockups}
