Fix spacing problem, table H -> h

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -7,7 +7,7 @@
 
 Παρακάτω στο \ref{tab:health_cloud_challenges_opportunities} βλέπουμε σε μορφή πίνακα μια σύνοψη των ευκαιριών αλλά και των προκλήσεων που παρουσιάζει η τεχνολογία του υπολογιστικού νέφους για το χώρο της υγείας.
 	
-\begin{table}[H]
+\begin{table}[h]
 	\begin{center}
 	    \begin{tabular}{|l| p{\dimexpr 0.45\linewidth-2\tabcolsep} | p{\dimexpr 0.45\linewidth-2\tabcolsep} |}
 	    \hline
