--- a/intro.tex
+++ b/intro.tex
@@ -9,4 +9,4 @@
 \end{itemize}
 Στην συνέχεια της παρούσας διπλωματικής εργασίας αναλύονται με λεπτομέρεια οι παραπάνω στόχοι καθώς και οι τρόποι που προσπαθούμε να τους πετύχουμε.
 \section{Οργάνωση κειμένου}
-H διπλωματική χωρίζεται σε 7 επιμέρους κεφάλαια. Στο κεφάλαιο 1 της διπλωματικής παρουσιάζεται το αντικείμενο και οι στόχοι που θέλει να πετύχει η παρούσα διπλωματική στο πεδίο των Ιατρικών Πληροφοριακών Συστημάτων. Στο κεφάλαιο 2 αναφέρονται γενικές πληροφορίες και στατιστικά για την εθελοντική αιμοδοσία στην Ελλάδα αλλά και στον υπόλοιπο κόσμο, όπου και γίνεται εμφανής η ανάγκη για μια βιώσιμη λύση. Στο τέλος του κεφάλαιου 2 γίνεται μια εισαγωγή στην αιμοεπαγρύπνηση και στην ελληνική μέριμνα σε αυτόν τον τομέα. Στο Κεφάλαιο 3 παρουσιάζεται λεπτομερώς η ανάλυση και η σχεδίαση του προτεινόμενου συστήματος αιμοδοσίας, που αποτελεί και το βασικό αντικείμενο της παρούσας διπλωματικής εργασίας. Στο κεφάλαιο 4 αναλύονται διεξοδικά οι διάφορες τεχνολογίες που χρησιμοποιήθηκαν τόσο στο Back-End όσο και στο Front-End των διάφορων υποσυστημάτων της εφαρμογής. Στο Κεφάλαιο 5 παρουσιάζεται λεπτομερώς η υλοποίηση του συστήματος αιμοδοσίας καθώς και μέθοδοι τεκμηρίωσης και αξιολόγησής τους. Στο κεφάλαιο 6 γίνεται αναφορά σε θέματα διασυνδεσιμότητας με τρίτα συστήματα και ανταλλαγής πληροφοριών με το σύστημα ηλεκτρονικής συνταγογράφησης και τον ηλεκτρονικό φάκελο ασθενούς και στην δημιουργία ενός clinical decision support system με μορφή υπηρεσίας στο υπολογιστικό νέφος. Επίσης παρουσιάζονται αναλυτικά πρωτόκολλα επικοινωνίας και μετάδοσης ευαίσθητων ιατρικών δεδομένων (HL7, CDA). Στο κεφάλαιο 7 γίνεται η σύνοψη της παρούσας διπλωματικής και παρουσιάζονται ιδέες και προτάσεις για την μελλοντική επέκταση της με επιπλέον υποσυστήματα και λειτουργικότητες.
+H διπλωματική χωρίζεται σε 7 επιμέρους κεφάλαια. Στο κεφάλαιο 1 της διπλωματικής παρουσιάζεται το αντικείμενο και οι στόχοι που θέλει να πετύχει η παρούσα διπλωματική στο πεδίο των Ιατρικών Πληροφοριακών Συστημάτων. Στο κεφάλαιο 2 αναφέρονται γενικές πληροφορίες και στατιστικά για την εθελοντική αιμοδοσία στην Ελλάδα αλλά και στον υπόλοιπο κόσμο, όπου και γίνεται εμφανής η ανάγκη για μια βιώσιμη λύση. Στο τέλος του κεφαλαίου 2 γίνεται μια εισαγωγή στην αιμοεπαγρύπνηση και στην ελληνική μέριμνα σε αυτόν τον τομέα. Στο Κεφάλαιο 3 παρουσιάζεται λεπτομερώς η ανάλυση και η σχεδίαση του προτεινόμενου συστήματος αιμοδοσίας, που αποτελεί και το βασικό αντικείμενο της παρούσας διπλωματικής εργασίας. Στο κεφάλαιο 4 αναλύονται διεξοδικά οι διάφορες τεχνολογίες που χρησιμοποιήθηκαν τόσο στο Back-End όσο και στο Front-End των διάφορων υποσυστημάτων της εφαρμογής. Στο Κεφάλαιο 5 παρουσιάζεται λεπτομερώς η υλοποίηση του συστήματος αιμοδοσίας καθώς και μέθοδοι τεκμηρίωσης και αξιολόγησής τους. Στο κεφάλαιο 6 γίνεται αναφορά σε θέματα διασυνδεσιμότητας με τρίτα συστήματα και ανταλλαγής πληροφοριών με το σύστημα ηλεκτρονικής συνταγογράφησης και τον ηλεκτρονικό φάκελο ασθενούς και στην δημιουργία ενός clinical decision support system με μορφή υπηρεσίας στο υπολογιστικό νέφος. Επίσης παρουσιάζονται αναλυτικά πρωτόκολλα επικοινωνίας και μετάδοσης ευαίσθητων ιατρικών δεδομένων (HL7, CDA). Στο κεφάλαιο 7 γίνεται η σύνοψη της παρούσας διπλωματικής και παρουσιάζονται ιδέες και προτάσεις για την μελλοντική επέκταση της με επιπλέον υποσυστήματα και λειτουργικότητες.
