Minor additions in system architecture preamble

--- a/implementation.tex
+++ b/implementation.tex
@@ -3,15 +3,15 @@
 \chapter{Υλοποίηση}\label{ch:Implementation}
 
 \section{Αρχιτεκτονική του συστήματος}
-Για την υλοποίηση του προτεινόμενου συστήματος αιμοδοσίας, χρησιμοποιείται η διαδεδομένη αρχιτεκτονική πολλαπλών επιπέδων (multitier architecture) όπως απεικονίζεται στο σχήμα \ref{fig:architect_schema}.
+Για την υλοποίηση του προτεινόμενου συστήματος αιμοδοσίας, χρησιμοποιείται η διαδεδομένη αρχιτεκτονική πολλαπλών επιπέδων (multitier architecture) όπως απεικονίζεται στο σχήμα \ref{fig:architect_schema}. Συγκεκριμένα χρησιμοποιήθηκε αρχιτεκτονική τριών επιπέδων (3-tier).
 
 	Τα επίπεδα που χρησιμοποιούνται στο σχήμα είναι τα εξής:
 	\begin{itemize}
-	\item Επίπεδο Βάσης Δεδομένων (Database layer). Στο επίπεδο αυτό τηρείται το σύνολο των επιχειρησιακών δεδομένων αλλά και των βοηθητικών αρχείων για την εύρυθμη λειτουργία των εφαρμογών του συστήματος.
+	\item Επίπεδο Βάσης Δεδομένων (Database layer). Αποτελώντας το βασικότερο επίπεδο του σύστηματος, στο επίπεδο αυτό τηρείται το σύνολο των επιχειρησιακών δεδομένων αλλά και των βοηθητικών αρχείων για την εύρυθμη λειτουργία των εφαρμογών του συστήματος.
 	
-	\item  Επίπεδο Επιχειρησιακής Λογικής (Bussiness logic layer). Στο επίπεδο αυτό διαμορφώνεται η επιχειρησιακή λογική ώστε να παραμετροποιείται το σύστημα με βάση τις ανάγκες λειτουργίας του φορέα.
+	\item  Επίπεδο Επιχειρησιακής Λογικής (Bussiness logic layer). Αποτελεί το κύριο τμήμα του λογισμικού, στο οποίο εκτελούνται οι περισσότερες λειτουργίες, εκτός εκείνων που σχετίζονται με τη διαμόρφωση των οθονών εργασίας. Στο επίπεδο αυτό διαμορφώνεται η επιχειρησιακή λογική ώστε να παραμετροποιείται το σύστημα με βάση τις ανάγκες λειτουργίας του φορέα.
 	
-	\item Επίπεδο Παρουσίασης ( Presentation layer). Αφορά στη διαπροσωπεία (User Interface) και στον τρόπο παρουσίασης των δεδομένων σύμφωνα με το ρόλο του κάθε χρήστη. Το προτεινόμενο σύστημα βασίζεται στις τεχνολογίες WEB και στις τεχνολογίες παρουσίασης του Android.
+	\item Επίπεδο Παρουσίασης ( Presentation layer). To τρίτο επίπεδο του λογισμικού αποτελεί τη επαφή του χρήστη με το σύστημα (User Interface). Στο επίπεδο αυτό, πραγματοποιείται η διαχείριση των Οθονών Εργασίας (User Screens) καθώς επίσης και η μορφοποίηση των δεδομένων που εμφανίζονται. Το προτεινόμενο σύστημα βασίζεται στις τεχνολογίες WEB και στις τεχνολογίες παρουσίασης του Android.
 	
 	\end{itemize}
 
