Add disclaimer about mobile OSs comparison

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -602,7 +602,7 @@
 
 \section{Mobile}
 	\subsection{Mobile OS}
-		Στην παρούσα ενότητα θα πραγματοποιήσουμε μια σύντομη σύγκριση μεταξύ των λειτουργικών συστημάτων iOS και Android. Περιορίζουμε την ανάλυση μόνο στα δύο προαναφερθείσα λειτουργικά γιατί αφενός έχουν τον μεγαλύτερο αριθμό ενεργών προγραμματιστών και αφετέρου τον μεγαλύτερο αριθμό χρηστών κάτι που τα καθιστά τα πλέον διαδεδομένα λειτουργικά στην αγορά των έξυπνων κινητών. Στον πίνακα \ref{tab:android_vs_ios} βλέπουμε μια στοιχειώδη σύγκριση μεταξύ των δύο λειτουργικών \cite{smartphoneMarketShare}\cite{androidPublish}\cite{applePublish}\cite{androidSource}.
+		Στην παρούσα ενότητα θα πραγματοποιήσουμε μια σύντομη σύγκριση μεταξύ των λειτουργικών συστημάτων iOS και Android. Περιορίζουμε την ανάλυση μόνο στα δύο προαναφερθείσα λειτουργικά γιατί αφενός έχουν τον μεγαλύτερο αριθμό ενεργών προγραμματιστών και αφετέρου τον μεγαλύτερο αριθμό χρηστών κάτι που τα καθιστά τα πλέον διαδεδομένα λειτουργικά στην αγορά των έξυπνων κινητών. Στον πίνακα \ref{tab:android_vs_ios} βλέπουμε μια στοιχειώδη σύγκριση μεταξύ των δύο λειτουργικών \cite{smartphoneMarketShare}\cite{androidPublish}\cite{applePublish}\cite{androidSource}. Θα πρέπει να σημειωθέι ότι οι τιμές και τα στοιχεία που αναφέρονται στον πίνακα \ref{tab:android_vs_ios} είναι αυτά που ισχυούν κατά την συγγραφή της παρούσας διπλωματικής (Οκτώβριος 2015).
 		
 	\begin{table}[H]
 		\begin{center}
