Fix whitespaces problems

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -285,33 +285,33 @@
 	Οι μέθοδοι εργασίας αναφορικά με τις ανεπιθύμητες αντιδράσεις και τα ανεπιθύμητα συμβάντα σχετικά με τη μετάγγιση αίματος και προϊόντων αίματος περιλαμβάνουν σε πρώτο στάδιο την καταγραφή ανεπιθυμήτων αντιδράσεων, που σχετίζονται με λοιμογόνους παράγοντες (ιογενείς, βακτηριακοί, παρασιτικοί παράγοντες) καθώς και αυτών που σχετίζονται με μη λοιμογόνους παράγοντες, ανεξάρτητα από την σοβαρότητα των αντιδράσεων. Επιπλέον καταγράφονται τα ανεπιθύμητα σοβαρά και «παρ’ ολίγον» συμβάματα και τα σφάλματα των μεταγγίσεων χωρίς σύμβαμα», που μπορεί να επηρεάσουν την ασφάλεια και την ποιότητα του μεταγγιζόμενου προϊόντος αίματος, σε όλες τις διαδικασίες της συλλογής, του ελέγχου, της επεξεργασίας, της αποθήκευσης και της διανομής προϊόντων αίματος. Το ΣΚΑΕ διαμορφώνει τα δελτία αναφοράς των ανεπιθύμητων αντιδράσεων και ανεπιθύμητων συμβάντων και τις οδηγίες διερεύνησης και αντιμετώπισης τους , σύμφωνα με τις Ευρωπαϊκές Οδηγίες και τις συστάσεις του Διεθνούς Δικτύου Αιμοεπαγρύπνησης. Οι πληροφορίες σχετικά με τις ανεπιθύμητες αντιδράσεις και τα ανεπιθύμητα συμβάντα αναλύονται διεξοδικά ανάλογα με τον τύπο της αντίδρασης, τη συσχέτιση με τη μετάγγιση, τη σοβαρότητα και την έκβαση της αντίδρασης και το προϊόν αίματος (ερυθρά, πλάσμα, αιμοπετάλια). Τέλος το ΣΚΑΕ συλλέγει, αναλύει και καταγράφει την ποιότητα των ελληνικών αναφορών για τις μεταδιδόμενες μέσω μετάγγισης λοιμώξεις συγκριτικά με τις απαιτήσεις αιμοεπαγρύπνησης και τις συστάσεις των διεθνών οργανισμών.
 	
 	Στην συνέχεια παρουσιάζονται στοιχεία τα οποία έχουν προκύψει από μακροχρόνιες μελέτες του ΣΚΑΕ και αφορούν τις ελληνικές αιμοδοσίες \cite{ΚΕΕΛΠΝΟ2015} . Στο σχήμα \ref{fig:statistics1}  παρουσιάζονται τα αποτελέσματα της οροεπικράτησης των λοιμώξεων που αφορούν ελεγχθείσες μονάδες ολικού αίματος και αφαίρεσης αιμοπεταλίων το διάστημα των ετών 1996-2013. Στο σχήμα 2 \ref{fig:statistics2} παρουσιάζεται η μέση ετήσια μεταβολή ορολογικών δεικτών κατά το διάστημα των ετών 2003-2013.
-	\begin{figure}[h!]
+	\begin{figure}[h]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics1.jpg}
 	    \caption{Οροεπικράτηση λοιμώξεων σε 9.459.863 ελεγχθείσες μονάδες αίματος και αφαίρεσης αιμοπεταλίων.}
 	    \label{fig:statistics1}
 \end{figure}	
-\begin{figure}[h!]
+\begin{figure}[h]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics2.jpg}
 	    \caption{Μέση μεταβολή των ορολογικών δεικτών των λοιμώξεων που μεταδίδονται με το αίμα.}
 	    \label{fig:statistics2}
 \end{figure}	
 	Η κατανομή και η ανάλυση των ανεπιθύμητων αντιδράσεων σχετικά με τη μετάγγιση ασθενών το έτος 2013 φαίνονται στο \ref{fig:statistics3}. Το έτος 2013 δηλώθηκαν, μελετήθηκαν και παρουσιάσθηκαν 1092 ανεπιθύμητες αντιδράσεις κατά τη μετάγγιση 729456 προϊόντων αίματος. Η συχνότητα των σοβαρών αντιδράσεων κατά τη μετάγγιση είναι 1/9994 προϊόντα. Κατά τα έτη 1997-2013, δηλώθηκαν επτά θάνατοι, με μεταγγίσεις 8972722 προϊόντων αίματος, συχνότητα 1/281817 προϊόντα με κύρια αίτια: ΑΒΟ ασυμβατότητα, TRALI, βακτηριακή επιμόλυνση.
-\begin{figure}[h!]
+\begin{figure}[h]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics3.jpg}
 	    \caption{Κατανομή αντιδράσεων.}
 	    \label{fig:statistics3}
 \end{figure}
 Στο σχήμα \ref{fig:statistics4} παρουσιάζονται διαγραμματικά οι ανεπιθύμητες αντιδράσεις σχετικές  με την αιμοδοσία. Πιο συγκεκριμένα δηλώθηκαν 148 ανεπιθύμητες αντιδράσεις που αφορούσαν σε σύνολο μεταγγίσεων 44611 μονάδων ερυθρών αιμοσφαιρίων. Καταγράφηκαν (σε ποσοστά επί τοις εκατό) 0.22 πυρετικές, 0.13 αλλεργικές, 0.13 αλλοανοσοποίηση και 0.6 άλλης αιτιολογίας αντίδρασης. Τέλος, στο σχήμα \ref{fig:statistics5} παρουσιάζεται ποσοστιαία ο αριθμός των συμβάντων που έλαβαν χώρα πριν και κατά τη διάρκεια της αιμοδοσίας.
-\begin{figure}[h!]
+\begin{figure}[h]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics4.jpg}
 	    \caption{Ανεπιθύμητες αντιδράσεις σχετικά με την αιμοδοσία 2013.}
 	    \label{fig:statistics4}
 \end{figure}
-\begin{figure}[h!]
+\begin{figure}[h]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{statistics5.jpg}
 	    \caption{ Συμβάντα κατά και μετά την αιμοδοσία, 2013.}
