--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -1,6 +1,6 @@
 \graphicspath{ {Figures/system_analysis/} }
 
-\chapter{Ανάλυση και σχεδιασμός του συστήματος LifeDonor}\label{ch:Analysis of LifeDonor}
+\chapter{Ανάλυση και σχεδιασμός του συστήματος}\label{ch:Analysis of LifeDonor}
 \section{Λειτουργικές απαιτήσεις}\label{sec:Functional Requirements}
 
 	Οι απαιτήσεις ενός συστήματος αποτελούν τη βάση των συστημάτων λογισμικού. Ουσιαστικά, είναι η περιγραφή των υπηρεσιών που πρέπει να παρέχει ένα σύστημα λογισμικού και οι περιορισμοί υπό τους οποίους πρέπει αυτές να λειτουργούν. Διακρίνονται σε δύο βασικές κατηγορίες τις λειτουργικές απαιτήσεις (functional requirements) και τις μη λειτουργικές απαιτήσεις(non functional requirements). 
@@ -119,7 +119,9 @@
 		\textbf{Κύρια ροή γεγονότων:}
 		Η κύρια ροή γεγονότων περιγράφει την περίπτωση που όλα βαίνουν αισίως. Είναι μια σειρά από αριθμημένα βήματα, όπου το κάθε βήμα είναι μία ρητή εντολή- μετάβαση.
 		\\ \hline
-		\textbf{Επεκτάσεις:} 
+		\rowcolor{grayy}
+		\textbf{Επεκτάσεις:}
+		\\ \hline 
 Οι επεκτάσεις περιγράφουν τι μπορεί να συμβεί και με διαφορετικό τρόπο κατά την διάρκεια εκτέλεσης του επιτυχημένου σεναρίου. Μπορούν να οδηγήσουν σε επιτυχία ή σε αποτυχίες. Κάθε επέκταση αποτελείται από δύο διαφορετικά μέρη:
  \begin{itemize}
  \item Τις προϋποθέσεις κάτω από τις οποίες το σύστημα υιοθετεί μία διαφορετική συμπεριφορά. Μετά από αυτές τοποθετείται μία άνω και κάτω τελεία (:).
@@ -169,7 +171,7 @@
 		\\ \hline
 		\rowcolor{grayy}    
 	    \textbf{Ροή γεγονότων}
-	    \\* 
+	    \\ \hline
 		\textbf{Κύρια ροή γεγονότων:}
 		\begin{enumerate}
 			\item	Ο χρήστης πηγαίνει στην επιλογή sign up και εισάγει το ΑΜΚΑ του.
@@ -178,7 +180,9 @@
 			\item Ο χρήστης ανακατευθύνεται στην αρχική σελίδα 
 		\end{enumerate}
 		\\ \hline
-		\textbf{Επεκτάσεις:} 
+		\rowcolor{grayy}
+		\textbf{Επεκτάσεις:}
+		\\ \hline 
 		\begin{enumerate}
 			\item	Ο χρήστης εισάγει ΑΜΚΑ για το οποίο έχει ήδη δημιουργηθεί κάποιο προφίλ.
 			\item Το σύστημα τον ενημερώνει και τον καθοδηγεί ώστε να ανακτήσει τα στοιχεία του.
@@ -191,6 +195,7 @@
 	\end{center}
 \end{table}
 
+\newpage
 - Σύνδεση στο σύστημα αν έχει πραγματοποιήσει ήδη έγγραφή στο παρελθόν.
 \\*
 \begin{table}[H]	
@@ -218,7 +223,7 @@
 		\\ \hline
 		\rowcolor{grayy}    
 	    \textbf{Ροή γεγονότων}
-	    \\* 
+	    \\ \hline
 		\textbf{Κύρια ροή γεγονότων:}
 		\begin{enumerate}
 			\item	Ο χρήστης εισάγει τα στοιχεία του και επιλέγει να συνδεθεί με το σύστημα.
@@ -227,6 +232,7 @@
 			\item	Ο χρήστης κατευθύνεται είτε στον προσωπικό του λογαριασμό (σωστή εισαγωγή στοιχειών) είτε του ζητείται να ξαναπροσπαθήσει να εισάγει τα σωστά στοιχεία στην sign in φόρμα.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		\\ \hline
 		\begin{itemize}
@@ -234,12 +240,14 @@
 		\item Το σύστημα εμφανίζει μήνυμα λάθους, χωρίς να επικοινωνήσει με την βάση δεδομένων για ταυτοποίηση.
 		\item Το σύστημα αναπροβάλει την φόρμα με μήνυμα οδηγιών στον χρήστη.
 		\end{itemize}
+		\\ \hline
 	    \end{tabular}
 	    \caption{Σενάριο χρήσης σύνδεσης στο σύστημα}
 	    \label{tab:user_sign_in} 	
 	\end{center}
 \end{table}
 
+\newpage
 - Προβολή  γεγονότων αιμοδοσίας.
 \\*
 \begin{table}[H]	
@@ -275,6 +283,7 @@
 			\item Ο χρήστης επιλέγει και αλλάζει την σειρά ως προς την οποία εμφανίζονται τα γεγονότα ανάλογα με κάποιο κριτήριο.
 		\end{enumerate}
 				\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -283,6 +292,7 @@
 	\end{center}
 \end{table}
 
+\newpage
 -Λήψης ειδοποιήσεων (push notifications) όταν δημιουργείται κάποιο νέο γεγονός αιμοδοσίας για το οποίο ο εθελοντής αιμοδότης πληρεί τα απαραίτητα κριτήρια.
 \\*
 \begin{table}[H]
@@ -318,7 +328,8 @@
 			\item Το σύστημα με βάση το αποτέλεσμα του προηγούμενου βήματος στέλνει ή όχι ειδοποίηση στον χρήστη.
 			\item Ο χρήστης βλέπει την ειδοποίηση στο κινητό του.
 		\end{enumerate}
-				\\ \hline
+		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -327,6 +338,7 @@
 	\end{center}
 \end{table}
 
+\newpage
 -Αποδοχή, απόρριψη ή αναβολή της ειδοποίησης για το γεγονός αιμοδοσίας.
 \\*
 \begin{table}[H]
@@ -364,6 +376,7 @@
 
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -372,7 +385,7 @@
 	\end{center}		
 \end{table}			
 			
-			
+\newpage			
 -Διαχείριση ραντεβού για αιμοδοσία (δημιουργία νέου ραντεβού, μετάθεση , προβολή, ακύρωση).
 \\*
 
@@ -410,6 +423,7 @@
 			\item Το σύστημα ανάλογα με τις προηγούμενες ενέργειες του χρήστη κατοχυρώνει τις τελικές αλλαγές.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -417,7 +431,8 @@
 	    \label{tab:blood_donation_reservation_management} 
 	\end{center}
 \end{table}	
-			
+
+\newpage			
 -Προσθήκη και συγχρονισμός των ραντεβού αιμοδοσίας στο ημερολόγιο του χρήστη.
 \\*
 \begin{table}[H]
@@ -452,6 +467,7 @@
 		\item  Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στις εφαρμογές ημερολογίου του, συγχρονίζει τα ζητούμενα δεδομένα.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 		\begin{enumerate}
@@ -465,7 +481,8 @@
 	    \label{tab:add_blood_donation_to_calendar}
 	\end{center}
 \end{table}	
-		
+
+\newpage		
 - Ενημέρωση σχετικά με το υπολειπόμενο διάστημα που πρέπει να παρέλθει ώστε ο εθελοντής να είναι σε θέση να συμμετέχει σε μία νέα αιμοδοσία.
 \\*
 \begin{table}[H]
@@ -500,6 +517,7 @@
 			\item  Το σύστημα με βάση τους κανονισμούς των αιμοδοτικών κέντρων για το απαιτούμενο διάστημα αποχής και την ημερομηνία τελευταίας αιμοδοσίας του εθελοντή, υπολογίζει τις υπολειπόμενες μέρες και τις εμφανίζει στον χρήστη.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -508,6 +526,7 @@
 	\end{center}
 \end{table}
 
+\newpage
 -Προβολή πόντων και εμβλημάτων βάση των αιμοδοσιών του (gamification system) και κοινοποίηση στα μέσα κοινωνικής δικτύωσης.
 \\*
 \begin{table}[H]
@@ -535,7 +554,7 @@
 		\\ \hline
 		\rowcolor{grayy}    
 	    \textbf{Ροή γεγονότων}
-	    \\* 
+	    \\ \hline
 		\textbf{Κύρια ροή γεγονότων:}
 		\begin{enumerate}
 		\item	 Ο χρήστης μπαίνει  στην καρτέλα "Πόντοι και εμβλήματα" της εφαρμογής.
@@ -543,6 +562,7 @@
 		\item Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στους λογαριασμούς του ζητούμενα κοινωνικά δίκτυα, μοιράζεται τα δεδομένα.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 		\begin{enumerate}
@@ -557,7 +577,7 @@
 	\end{center}
 \end{table}
 
-
+\newpage
 -Δημοσίευση στοιχείων στα μέσα κοινωνικής δικτύωσης σε κάθε στάδιο της αιμοδοσίας.
 \\*
 \begin{table}[H]	
@@ -592,7 +612,8 @@
 		\item Ο χρήστης συμπληρώνει την περιγραφή της δημοσίευσης και επιλέγει τα μέσα κοινωνικής δικτύωσης στα οποία θέλει να γίνει η ανάρτηση.
 	   \item Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στους λογαριασμούς του στα ζητούμενα κοινωνικά δίκτυα, μοιράζεται τα δεδομένα.
 		\end{enumerate}
-		\\*
+		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 		\begin{enumerate}
@@ -607,8 +628,8 @@
 	\end{center}
 \end{table}		
 
--Δημιουργία έκκλησης για αίμα σε περίπτωση ανάγκης ατόμων του στενού κύκλου χρήστη και δημοσίευσης του στα μέσα κοινωνικής δικτύωσης.
-\\*
+\newpage
+-Δημιουργία έκκλησης για αίμα.
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -642,7 +663,8 @@
 		\item Ο χρήστης επιλέγει κοινοποίηση του αιτήματος και τα μέσα κοινωνικής δικτύωσης στα οποία θέλει να γίνει η ανάρτηση.
 	   \item Το σύστημα, εφόσον ο χρήστης το έχει εξουσιοδοτήσει με άδεια πρόσβασης στους λογαριασμούς του στα ζητούμενα κοινωνικά δίκτυα, μοιράζεται τα δεδομένα.
 		\end{enumerate}
-		\\*
+		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 		\begin{enumerate}
@@ -657,6 +679,7 @@
 	\end{center}
 \end{table}
 
+\newpage
 -Διαχείριση προφίλ χρήστη.
 \\*
 \begin{table}[H]
@@ -692,6 +715,7 @@
 			\item Το σύστημα αποθηκεύει τις αλλαγές του χρήστη και ανανεώνει το προφίλ του, ώστε να βλέπει τα νέα δεδομένα.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -705,6 +729,7 @@
 
 Όσον αφορά στους χρήστες/διαχειριστές των κέντρων αιμοδοσίας έχουμε τα εξής σενάρια χρήσης:
 
+\newpage
 -Δημιουργία νέων γεγονότων αιμοδοσίας.
 \\*
 \begin{table}[H]
@@ -740,6 +765,7 @@
 		\item Το σύστημα τρέχει τους απαραίτητους αλγορίθμους και επιλέγει ποιους χρήστες θα ενημερώσει με τα κατάλληλα push notifications.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -748,10 +774,8 @@
 	\end{center}
 \end{table}
 
-
+\newpage
 - Προβολή στατιστικών ανά έτος σχετικά με τις ειδοποιήσεις που στάλθηκαν από το συγκεκριμένο κέντρο αιμοδοσίας και την ανταπόκριση των χρηστών (αποδοχή, απόρριψη, άνοιγμα ειδοποίησης, ολοκλήρωση αιμοδοσίας).
-\\*
-
 
 \begin{table}[H]
 	\begin{center}
@@ -787,6 +811,7 @@
 		\item Τα δεδομένα παρουσιάζονται στον χρήστη αναλυτικά  σε νέα σελίδα.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -795,7 +820,7 @@
 	\end{center}
 \end{table}
 
-
+\newpage
 -Διαχείριση των ραντεβού για αιμοληψία.
 \\*
 \begin{table}[H]
@@ -831,6 +856,7 @@
 			\item Το σύστημα ανάλογα με τις προηγούμενες ενέργειες του χρήστη κατοχυρώνει τις τελικές αλλαγές.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -840,7 +866,7 @@
 \end{table}	
 
 
-
+\newpage
 -Δυνατότητα διαχείρισης προφίλ κέντρου αιμοδοσίας.
 \\*
 
@@ -877,6 +903,7 @@
 			\item Το σύστημα αποθηκεύει τις αλλαγές του χρήστη και ανανεώνει το προφίλ, ώστε να ορατά σε όλους τα νέα δεδομένα.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -885,7 +912,8 @@
 	\end{center}
 \end{table}	
 
-Δυνατότητα εγγραφής στο σύστημα νέου εθελοντή αιμοδότη.
+\newpage
+-Δυνατότητα εγγραφής στο σύστημα νέου εθελοντή αιμοδότη.
 \\*	
 
 \begin{table}[H]
@@ -922,6 +950,7 @@
 			\item Το σύστημα δημιουργεί τον λογαριασμό του εθελοντή αιμοδότη.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -931,7 +960,7 @@
 \end{table}	
 
 
-
+\newpage
 -Καταχώρηση της ολοκλήρωσης αιμοδοσίας.
 \\*	
 
@@ -970,6 +999,7 @@
 			\item Το σύστημα ενημερώνει τον λογαριασμό του εθελοντή αιμοδότη.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -978,7 +1008,7 @@
 	\end{center}
 \end{table}	
 
-
+\newpage
 -Έλεγχος καταλληλότητας εθελοντή αιμοδότη.
 \\*
 \begin{table}[H]
@@ -1015,6 +1045,7 @@
 			\item Το σύστημα επικοινωνεί με το epSOS (ηλεκτρονική συνταγογράφηση και ηλεκτρονικός ιατρικός φάκελος ασθενούς) και ``τραβάει" τα απαραίτητα δεδομένα, τρέχει ειδικούς αλγορίθμους και αποφαίνεται αν ο χρήστης είναι κατάλληλος ή όχι.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -1024,9 +1055,8 @@
 \end{table}	
 
 
-			
+\newpage			
 Όσον αφορά στους υπέρ-διαχειριστές του συστήματος έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
-
 
 -Δυνατότητα διαχείρισης λογαριασμών χρηστών.
 \\*
@@ -1063,6 +1093,7 @@
 			\item Το σύστημα αποθηκεύει τις αλλαγές του χρήστη και αλλάζει τα προφίλ, στέλνοντας ειδοποιήσεις στους αντίστοιχους χρήστες.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -1072,7 +1103,7 @@
 \end{table}	
 
 
-
+\newpage
 - Προβολή στατιστικών για τους χρήστες του συστήματος.
 \\*		
 \begin{table}[H]
@@ -1109,6 +1140,7 @@
 		\item Τα δεδομένα παρουσιάζονται στον χρήστη αναλυτικά  σε νέα σελίδα.
 		\end{enumerate}
 		\\ \hline
+		\rowcolor{grayy}
 		\textbf{Επεκτάσεις:}
 		   \\ \hline
 	    \end{tabular}
@@ -1117,17 +1149,15 @@
 	\end{center}
 \end{table}
 
-\section{UML Diagrams - Activity Diagrams}
+\section{Διαγράμματα UML - Διαγράμματα δραστηριότητας}
 
-		Τα διαγράμματα δραστηριότητας χρησιμοποιούνται για να μοντελοποιήσουν ένα σενάριο χρήσης με μεγάλη λεπτομέρεια. Κάθε διάγραμμα δραστηριότητας αρχίζει με ένα μαύρο κύκλο και σταματά στη (σε τουλάχιστον ένα) ομόκεντρο ασπρόμαυρο κύκλο. Οι δράσεις συμβολίζονται με εκλείψεις. Όταν μια δράση αναλύεται σε επιμέρους δράσεις, χρησιμοποιούνται κουτιά με στρογγυλεμένες άκρες. Από κάθε δράση βγαίνει ένα βέλος, που ονομάζεται μετάβαση, και πραγματοποιεί την σύνδεση με την επόμενη. Το βέλος μπορεί επίσης να οδηγήσει σε ένα διαμάντι, το οποίο υποδεικνύει διακλάδωση σε δύο ή περισσότερες αλληλοαναιρούμενες μεταβάσεις. Οι εκφράσεις που βρίσκονται μέσα σε αγκύλες [], π.χ. [υπάρχει όνομα χρήστη] ή [δεν υπάρχει όνομα χρήστη], επισημαίνουν τις μεταβάσεις που προέρχονται από ένα κλαδί. Επίσης, μία μετάβαση μπορεί να διακλαδωθεί σε δύο ή περισσότερες παράλληλες δραστηριότητες (fork activities). Όταν και οι δύο δραστηριότητες έχουν ολοκληρωθεί ενώνονται και  η ροή συνεχίζεται. Κάθε διακλάδωση (fork) πρέπει να είναι ακολουθείται από μία ένωση (join). Οι διακλαδώσεις(forks) και οι ενώσεις(joins) εμφανίζονται στο διάγραμμα δραστηριότης σαν μπάρες.
+		Τα διαγράμματα δραστηριότητας χρησιμοποιούνται για να μοντελοποιήσουν ένα σενάριο χρήσης με μεγάλη λεπτομέρεια. Κάθε διάγραμμα δραστηριότητας αρχίζει με ένα μαύρο κύκλο και σταματά σε τουλάχιστον έναν ομόκεντρο ασπρόμαυρο κύκλο. Οι δράσεις συμβολίζονται με ελλείψεις. Όταν μια δράση αναλύεται σε επιμέρους δράσεις, χρησιμοποιούνται κουτιά με στρογγυλεμένες άκρες. Από κάθε δράση βγαίνει ένα βέλος, που ονομάζεται μετάβαση και πραγματοποιεί την σύνδεση με την επόμενη. Το βέλος μπορεί επίσης να οδηγήσει σε ένα διαμάντι, το οποίο υποδεικνύει διακλάδωση σε δύο ή περισσότερες αλληλοαναιρούμενες μεταβάσεις. Οι εκφράσεις που βρίσκονται μέσα σε αγκύλες [], π.χ. [υπάρχει όνομα χρήστη] ή [δεν υπάρχει όνομα χρήστη], επισημαίνουν τις μεταβάσεις που προέρχονται από ένα κλαδί. Επίσης, μία μετάβαση μπορεί να διακλαδωθεί σε δύο ή περισσότερες παράλληλες δραστηριότητες (fork activities). Όταν και οι δύο δραστηριότητες έχουν ολοκληρωθεί ενώνονται και  η ροή συνεχίζεται. Κάθε διακλάδωση (fork) πρέπει να ακολουθείται από μία ένωση (join). Οι διακλαδώσεις(forks) και οι ενώσεις(joins) εμφανίζονται στο διάγραμμα δραστηριότητας σαν μπάρες.
 
-		Στην συνέχεια ακολουθούν κάποια ακολουθιακά διαγράμματα:
-		
-		
+		Στην συνέχεια ακολουθούν κάποια διαγράμματα δραστηριότητας:
 		\begin{figure}[H]
 		    \centering
-		    \includegraphics[width=0.7\textwidth]{Register.png}
-		    \caption{Ακολουθιακό διάγραμμα \#1. Εγγραφή εθελοντή αιμοδότη στο σύστημα.}
+		    \includegraphics[width=0.52\textwidth]{Register.png}
+		    \caption{Διάγραμμα δραστηριότητας \#1. Εγγραφή εθελοντή αιμοδότη στο σύστημα.}
 		    \label{fig:register}
 		\end{figure}
 		
@@ -1135,21 +1165,21 @@
 		\begin{figure}[H]
 		    \centering
 		    \includegraphics[width=1\textwidth]{Login.png}
-		    \caption{Ακολουθιακό διάγραμμα \#2. Είσοδος εθελοντή αιμοδότη στο σύστημα.}
+		    \caption{Διάγραμμα δραστηριότητας \#2. Είσοδος εθελοντή αιμοδότη στο σύστημα.}
 		    \label{fig:login}
 		\end{figure}
 		
 		\begin{figure}[H]
 		    \centering
 		    \includegraphics[width=0.7\textwidth]{ViewDonationEvents.png}
-		    \caption{Ακολουθιακό διάγραμμα \#3. Προβολή γεγονότων αιμοδοσίας, από τον εθελοντή αιμοδότη.}
+		    \caption{Διάγραμμα δραστηριότητας \#3. Προβολή γεγονότων αιμοδοσίας, από τον εθελοντή αιμοδότη.}
 		    \label{fig:view}
 		\end{figure}
 		
 	    \begin{figure}[H]
 		    \centering
 		    \includegraphics[width=0.9\textwidth]{ManageNotifications.png}
-		    \caption{Ακολουθιακό διάγραμμα \#4. Διαχείριση των ειδοποιήσεων για τα γεγονότα αιμοδοσίας από τον εθελοντή αιμοδότη.}
+		    \caption{Διάγραμμα δραστηριότητας \#4. Διαχείριση των ειδοποιήσεων για τα γεγονότα αιμοδοσίας από τον εθελοντή αιμοδότη.}
 		    \label{fig:manage}
 		\end{figure}
 
@@ -1157,22 +1187,22 @@
 		\begin{figure}[H]
 		    \centering
 		    \includegraphics[width=0.5\textwidth]{CreateReservation.png}
-		    \caption{Ακολουθιακό διάγραμμα \#5. Κλείσιμο ραντεβού για αιμοδοσία από τον εθελοντή αιμοδότη.}
+		    \caption{Διάγραμμα δραστηριότητας \#5. Κλείσιμο ραντεβού για αιμοδοσία από τον εθελοντή αιμοδότη.}
 		    \label{fig:createAppoint}
 		\end{figure}
 		
 				
 		\begin{figure}[H]
 		    \centering
-		    \includegraphics[width=0.7\textwidth]{CompleteDonation.png}
-		    \caption{Ακολουθιακό διάγραμμα \#6. Καταχώρηση αιμοδοσίας από τον  εγκεκριμένο χρήστη/διαχειριστή του συστήματος αιμοδοσίας σύστημα.}
+		    \includegraphics[width=0.6\textwidth]{CompleteDonation.png}
+		    \caption{Διάγραμμα δραστηριότητας \#6. Καταχώρηση αιμοδοσίας από τον  εγκεκριμένο χρήστη/διαχειριστή του συστήματος αιμοδοσίας σύστημα.}
 		    \label{fig:complete}
 		\end{figure}
 		
 	    \begin{figure}[H]
 		    \centering
 		    \includegraphics[width=0.55\textwidth]{EligibilityTest.png}
-		    \caption{Ακολουθιακό διάγραμμα \#7. Έλεγχος καταλληλότητας του υποψήφιου αιμοδότη από τον  εγκεκριμένο χρήστη/διαχειριστή του συστήματος αιμοδοσίας.}
+		    \caption{Διάγραμμα δραστηριότητας \#7. Έλεγχος καταλληλότητας του υποψήφιου αιμοδότη από τον  εγκεκριμένο χρήστη/διαχειριστή του συστήματος αιμοδοσίας.}
 		    \label{fig:eligibiity}
 		\end{figure}
 		
